# cpsat-primer

./: .gitignore  .pre-commit-config.yaml  00_intro.md  01_installation.md  02_example.md  03_big_picture.md  04B_advanced_modelling.md  04_modelling.md  05_parameters.md  06_coding_patterns.md  07_under_the_hood.md  08_benchmarking.md  09_lns.md  CITATION.cff  CONTRIBUTING.md  README.md  build.py  building_an_optimization_api.md  old_how_does_it_work.md  text  understanding_the_log.md
.mdbook/: 404.md  SUMMARY.md  book.toml
_playground/: solver.txt
chapters/: 00_intro.md  01_installation.md  02_example.md  04B_advanced_modelling.md  04_modelling.md  05_parameters.md  06_coding_patterns.md  07_under_the_hood.md  08_benchmarking.md  09_lns.md  building_an_optimization_api.md  machine_learning.md  mathopt.md  test_driven_optimization.md
examples/: add_all_different.ipynb  add_circuit.py  add_circuit_budget.py  add_circuit_comparison.ipynb  add_circuit_multi_tour.py  add_no_overlap_2d.ipynb  add_no_overlap_2d_parameters.ipynb  add_no_overlap_2d_scaling.ipynb  add_no_overlap_scheduling.py  add_reservoir.ipynb  lns_knapsack.ipynb  lns_knapsack_full_output.ipynb  lns_marimo.py  patterns_multi_objective.ipynb  scheduling_multi_resources.ipynb
examples/embedding_cpsat/: README.md  app.py  main.py  pyproject.toml  solver_process.py  tsp_solver.py
test_snippets/: test_FixedSizedIntervalvar.py  test_Intervalvar.py  test_intvar.py  test_multiplication_division_modulo.py  test_random_intvar.py  test_snippets.py
tests/: test_abs_minmax.py  test_all_different.py  test_array.py  (+16 more)
(+245 files in other folders)
